--- a/PY4E/Tuples/tuples.ipynb
+++ b/PY4E/Tuples/tuples.ipynb
@@ -2,14 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['09:14:16', '18:10:48', '16:10:39', '15:46:24', '15:03:18', '14:50:18', '11:37:30', '11:35:08', '11:12:37', '11:11:52', '11:11:03', '11:10:22', '10:38:42', '10:17:43', '10:04:14', '09:05:31', '07:02:32', '06:08:27', '04:49:08', '04:33:44', '04:07:34', '19:51:21', '17:18:23', '17:07:00', '16:34:40', '16:29:07', '16:23:48']\n"
+      "04 3\n",
+      "06 1\n",
+      "07 1\n",
+      "09 2\n",
+      "10 3\n",
+      "11 6\n",
+      "14 1\n",
+      "15 2\n",
+      "16 4\n",
+      "17 2\n",
+      "18 1\n",
+      "19 1\n"
      ]
     }
    ],
@@ -19,10 +30,18 @@
     "\n",
     "name = \"mbox-short.txt\"\n",
     "fh = open(name)\n",
-    "count = 0\n",
-    "address_list = []\n",
-    "mail_dict = dict()\n",
-    "hour_of_day_list = []\n",
+    "\n",
+    "hour_list=[]\n",
+    "hour_occurrence = dict()\n",
+    "\n",
+    "# variable iterated_line is a list of elements derived from applying split method to line in file\n",
+    "# variable time is the time derived from each valid line - denoted hh:mm:ss\n",
+    "# variable time_list is derived from a split of the time string....we want to extract just the hour\n",
+    "# variable hour is extracted from the time string\n",
+    "# I am sure there has to be a better approach to this program\n",
+    "\n",
+    "# variable hour_list stores each instance an hour occurs\n",
+    "# variable hour_occurrence is a dictionary that list the hour and the occurrence\n",
     "\n",
     "#Iterate through each line in the file\n",
     "for line in fh:\n",
@@ -36,16 +55,36 @@
     "    #We need to remove those lines to search for the hour information\n",
     "    \n",
     "    if line.startswith('From') and len(iterated_line)>5:\n",
-    "        hour = iterated_line[5]\n",
-    "        hour_of_day_list.append(hour)\n",
-    "        count = count + 1\n",
-    "        \n",
-    "print(hour_of_day_list)"
+    "        time = iterated_line[5]\n",
+    "        time_list = time.split(':')\n",
+    "        hour = time_list[0]\n",
+    "        hour_list.append(hour)\n",
+    "\n",
+    "# create occurence dictionary\n",
+    "for hour in hour_list:\n",
+    "    hour_occurrence[hour] = hour_occurrence.get(hour,0) + 1\n",
+    "\n",
+    "#variable hour_sorted is a list of hours sorted by occurrence\n",
+    "hour_sorted = list()\n",
+    "\n",
+    "for key,val in hour_occurrence.items():\n",
+    "    newtup = (key, val)   #reverse order so we can sort on value\n",
+    "    hour_sorted.append(newtup)\n",
+    "\n",
+    "#sort hours by occurrences - values now show up first\n",
+    "#hour_sorted = sorted(hour_sorted, reverse=True)\n",
+    "hour_sorted = sorted(hour_sorted)\n",
+    "\n",
+    "for val,key in hour_sorted:\n",
+    "    print(val,key)\n",
+    "\n",
+    "#print(hour)\n",
+    "#print(hour_sorted)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
