--- a/PY4E/RegEx/regex.ipynb
+++ b/PY4E/RegEx/regex.ipynb
@@ -12,19 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "445833\n"
+      "302585\n",
+      "74\n"
      ]
     }
    ],
    "source": [
-    "fname = \"regex_sum_42.txt\"\n",
+    "fname = \"regex_sum_376906.txt\"\n",
     "\n",
     "fh = open(fname)\n",
     "\n",
@@ -46,7 +47,8 @@
     "total = sum(num_list)\n",
     "print(total)\n",
     "\n",
-    "num_count = "
+    "num_count = len(num_list)\n",
+    "print(num_count)"
    ]
   },
   {
@@ -74,7 +76,7 @@
     }
    ],
    "source": [
-    "#Test Code\n",
+    "#Test Sample Code\n",
     "text_line = 'as 4497 our 6702 personal 8454 assistants who can take care of many things'\n",
     "num = re.findall(r'[0-9]+', text_line)\n",
     "print(num)\n",
