Second Soup Program

--- a/PY4E/Web Scraping/BeautifulSoup2.ipynb
+++ b/PY4E/Web Scraping/BeautifulSoup2.ipynb
@@ -2,149 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter -  http://py4e-data.dr-chuck.net/known_by_Fikret.html\n",
+      "Enter Count: 4\n",
+      "Enter Position: 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving: http://py4e-data.dr-chuck.net/known_by_Fikret.html\n"
+     ]
+    }
+   ],
    "source": [
     "import urllib.request, urllib.parse, urllib.error\n",
     "from bs4 import BeautifulSoup\n",
     "import ssl\n",
+    "import re\n",
     "\n",
     "# Ignore SSL certificate errors\n",
     "ctx = ssl.create_default_context()\n",
     "ctx.check_hostname = False\n",
     "ctx.verify_mode = ssl.CERT_NONE\n",
     "\n",
-    "#url = input('Enter - ')\n",
-    "url = \"http://py4e-data.dr-chuck.net/known_by_Fikret.html\"\n",
+    "url = input('Enter - ')\n",
+    "#url = \"http://py4e-data.dr-chuck.net/known_by_Fikret.html\"\n",
+    "\n",
     "\n",
     "html = urllib.request.urlopen(url, context=ctx).read()\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "#count = input(\"Enter Count:\")\n",
-    "count = 4\n",
+    "count_input = input(\"Enter Count:\")\n",
+    "count = int(count_input)\n",
+    "#count = 4\n",
     "\n",
-    "#position = input(\"Enter Position:\")\n",
-    "position = 3"
+    "\n",
+    "p_input = input(\"Enter Position:\")\n",
+    "position = int(p_input)\n",
+    "#position = position - 1\n",
+    "#position = 2\n",
+    "\n",
+    "print(f\"Retrieving: {url}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://py4e-data.dr-chuck.net/known_by_Aniqa.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Ogheneruno.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Montgomery.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Owain.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Haniyah.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Anona.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Edyn.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Dallace.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Zoe.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Kiarash.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Tracy.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Carmyle.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Zahraa.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Alanys.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Airidas.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Melisa.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Vivian.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Margaret.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Hajra.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Ajooni.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Alexanne.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Sudais.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Seb.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Christin.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Jaimie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Jennah.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Landon.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Mea.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Cacie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Colton.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Mitchel.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Chintu.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Hyden.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Chrystal.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Lincon.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Jaden.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Roma.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Manolo.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Clio.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Teos.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Rihonn.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Griffin.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Conley.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Xiao.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Dhyia.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Manahil.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Diona.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Dharam.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Danielle.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Rori.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Lang.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Sabila.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Zoha.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Jemma.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Silvana.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Asal.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Dillon.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_CJ.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Joanna.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Atal.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Callun.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Anubhav.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Coray.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Graeme.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Chrissie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Ayub.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Heather.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Katie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Inaara.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Siddhant.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Salymat.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Shahd.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Anaya.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Kevaugh.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Thumbiko.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Xida.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Alaska.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Shonagh.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Kaiya.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Khadija.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Kieron.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Filip.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Dorothy.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Kallan.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Mena.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Abbie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Amyleigh.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Annalise.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Carrich.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Rachel.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Etinosa.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Amie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Lisa.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Liv.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Baylie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Jubin.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Kacie.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Falyn.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Conli.html\n",
-      "http://py4e-data.dr-chuck.net/known_by_Cohen.html\n"
+      "<class 'int'>\n",
+      "<class 'int'>\n"
      ]
     }
    ],
    "source": [
-    "# Retrieve all of the anchor tags\n",
-    "#tags = soup('a')\n",
-    "#for tag in tags:\n",
-    "    #print(tag.get('href', None))"
+    "#print(type(count))\n",
+    "#print(type(position))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving: http://py4e-data.dr-chuck.net/known_by_Montgomery.html\n",
+      "Retrieving: http://py4e-data.dr-chuck.net/known_by_Mhairade.html\n",
+      "Retrieving: http://py4e-data.dr-chuck.net/known_by_Butchi.html\n",
+      "Retrieving: http://py4e-data.dr-chuck.net/known_by_Anayah.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "#print(i)\n",
+    "#print(count)\n",
+    "while (i < count):\n",
+    "    #print(\"test\")\n",
+    "    #tags = soup('a')\n",
+    "    #url = tags[position]\n",
+    "    #print(f\"Retrieving: {url}\")\n",
+    "    \n",
+    "    links = []\n",
+    "\n",
+    "    for link in soup.findAll('a', attrs={'href': re.compile(\"^http://\")}):\n",
+    "        links.append(link.get('href'))\n",
+    "    \n",
+    "    \n",
+    "    url = links[position]\n",
+    "    print(f\"Retrieving: {url}\")\n",
+    "    \n",
+    "    html = urllib.request.urlopen(url, context=ctx).read()\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    \n",
+    "    i = i + 1"
    ]
   },
   {
@@ -152,11 +118,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "tags = soup('a')\n",
-    "for tag in tags:\n",
-    "    #print(tag.get('href', None))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
