Completed xml extraction

--- a/PY4E/XML/xml_extract.ipynb
+++ b/PY4E/XML/xml_extract.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import relevant libraries\n",
     "from urllib.request import urlopen\n",
     "import urllib.request, urllib.parse, urllib.error\n",
     "#import xml.etree.ElementTree as ET\n",
@@ -27,26 +28,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter -  http://py4e-data.dr-chuck.net/comments_42.xml\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving  http://py4e-data.dr-chuck.net/comments_42.xml\n"
+     ]
+    }
+   ],
    "source": [
     "#Actual Data\n",
-    "url = urlopen('http://py4e-data.dr-chuck.net/comments_42.xml')\n",
+    "#Prompt for URL for xml file and parse the XML\n",
+    "\n",
+    "link = input('Enter - ')\n",
+    "url = urlopen(link)\n",
+    "#url = urlopen('http://py4e-data.dr-chuck.net/comments_42.xml')\n",
     "xmldoc = parse(url)\n",
-    "\n"
+    "\n",
+    "print(\"Retrieving \", link)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n"
+      "Count:  50\n"
      ]
     }
    ],
@@ -54,95 +75,40 @@
     "#Determine the number of count entries in xml tree\n",
     "counts = xmldoc.findall('.//count')\n",
     "#counts = xml_tree.findall('./comments/comment/count')\n",
-    "print(len(counts))"
+    "print(\"Count: \",(len(counts)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97\n",
-      "97\n",
-      "90\n",
-      "90\n",
-      "88\n",
-      "87\n",
-      "87\n",
-      "80\n",
-      "79\n",
-      "79\n",
-      "78\n",
-      "76\n",
-      "76\n",
-      "72\n",
-      "72\n",
-      "66\n",
-      "66\n",
-      "65\n",
-      "65\n",
-      "64\n",
-      "61\n",
-      "61\n",
-      "59\n",
-      "58\n",
-      "57\n",
-      "57\n",
-      "54\n",
-      "51\n",
-      "49\n",
-      "47\n",
-      "40\n",
-      "38\n",
-      "37\n",
-      "36\n",
-      "36\n",
-      "32\n",
-      "25\n",
-      "24\n",
-      "22\n",
-      "21\n",
-      "19\n",
-      "18\n",
-      "18\n",
-      "14\n",
-      "12\n",
-      "12\n",
-      "9\n",
-      "7\n",
-      "3\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#This will be a runninng tally of numbers extracted from xml\n",
     "count_list=[]\n",
+    "\n",
     "\n",
     "for item in xmldoc.iterfind('comments/comment'):\n",
     "    count_number = int(item.findtext('count'))\n",
     "    count_list.append(count_number)\n",
-    "    print(count_number)"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2553\n"
+      "Sum:  2553\n"
      ]
     }
    ],
    "source": [
-    "print(sum(count_list))"
+    "print('Sum: ',(sum(count_list)))"
    ]
   },
   {
