--- a/stats/univariant-data.ipynb
+++ b/stats/univariant-data.ipynb
@@ -252,6 +252,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "[4. 6.]\n",
+      "[3. 7.]\n",
+      "2.5\n",
+      "[2. 3.]\n",
+      "[1.5 3.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
+    "# sum of all of the elements for x\n",
+    "print(np.sum(x))\n",
+    "\n",
+    "#sum of the numbers in a column\n",
+    "print(np.sum(x, axis = 0))\n",
+    "\n",
+    "#sum of the numbers in a row\n",
+    "print(np.sum(x, axis = 1))\n",
+    "\n",
+    "#compute mean of ALL elements\n",
+    "print(np.mean(x))\n",
+    "\n",
+    "#compute mean of numbers in a column\n",
+    "print(np.mean(x, axis = 0))\n",
+    "\n",
+    "#compute mean of numbers in each row\n",
+    "print(np.mean(x, axis = 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#SciPy\n",
+    "Using the stats sub modules\n",
+    "This contains a large number of probability distributions as well as a growing library of statistical functions\n",
+    "\n",
+    "- Continuous and Dsicrete Distributions\n",
+    "- Descriptive Statistics\n",
+    "- Statical Test (T-Test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.22838052  1.12432185  1.71106134  0.71510687  0.22690122  0.11924696\n",
+      "  0.07055393 -0.28746706 -1.12708225  0.58310287]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print random variables with a normal distribution\n",
+    "print(stats.norm.rvs(size=10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(282)\n",
+    "\n",
+    "# Generate 1000 numbers in a T distribution\n",
+    "x = stats.t.rvs(10, size=1000)\n",
+    "\n",
+    "# What is the first 10 for?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4.352407464829776\n",
+      "3.2692587786535547\n",
+      "0.028814524286841475\n",
+      "1.3359198357478759\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DescribeResult(nobs=1000, minmax=(-4.352407464829776, 3.2692587786535547), mean=0.028814524286841475, variance=1.3372570928407166, skewness=-0.009988147310210471, kurtosis=0.4794481198618712)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(x.min())\n",
+    "\n",
+    "print(x.max())\n",
+    "\n",
+    "print(x.mean())\n",
+    "\n",
+    "print(x.var())\n",
+    "\n",
+    "stats.describe(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Kurtosis\n",
+    "Measure of the \"tailedness\" of the probability distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
