--- a/Other/List_Review4.ipynb
+++ b/Other/List_Review4.ipynb
@@ -9,16 +9,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marketing: Mike, Karen, Jake, Tasha, \n",
+      "Engineering: Kim, Jay, Tom, \n",
+      "Users: \n"
+     ]
+    }
+   ],
    "source": [
     "def group_list(group, users):\n",
-    "  members = ___\n",
-    "  return ___\n",
+    "    members = group + \": \" \n",
+    "    for x in users:\n",
+    "        members = members + x + \", \"\n",
+    "    return members\n",
+    "\n",
+    "\n",
     "print(group_list(\"Marketing\", [\"Mike\", \"Karen\", \"Jake\", \"Tasha\"])) # Should be \"Marketing: Mike, Karen, Jake, Tasha\"\n",
     "print(group_list(\"Engineering\", [\"Kim\", \"Jay\", \"Tom\"])) # Should be \"Engineering: Kim, Jay, Tom\"\n",
-    "print(group_list(\"Users\", \"\")) # Should be \"Users:\"\n"
+    "print(group_list(\"Users\", \"\")) # Should be \"Users:\""
    ]
   },
   {
@@ -41,27 +55,6 @@
     "#print(group_members[0])\n",
     "\n",
     "print(group_members[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def group_list(group, users):\n",
-    "  members = ___\n",
-    "  return ___\n",
-    "print(group_list(\"Marketing\", [\"Mike\", \"Karen\", \"Jake\", \"Tasha\"])) # Should be \"Marketing: Mike, Karen, Jake, Tasha\"\n",
-    "print(group_list(\"Engineering\", [\"Kim\", \"Jay\", \"Tom\"])) # Should be \"Engineering: Kim, Jay, Tom\"\n",
-    "print(group_list(\"Users\", \"\")) # Should be \"Users:\""
    ]
   }
  ],
