--- a/Other/Dictionary_Review2.ipynb
+++ b/Other/Dictionary_Review2.ipynb
@@ -27,6 +27,100 @@
     "        \"public\":  [\"admin\", \"userB\"],\n",
     "        \"administrator\": [\"admin\"] }))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'admin': 'administrator', 'userA': 'local', 'userB': 'public'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "groups_per_user = {\"local\": [\"admin\", \"userA\"],\n",
+    "        \"public\":  [\"admin\", \"userB\"],\n",
+    "        \"administrator\": [\"admin\"] }\n",
+    "\n",
+    "user_groups={}\n",
+    "\n",
+    "for x in groups_per_user:\n",
+    "    #print(x)\n",
+    "    users = groups_per_user[x]   #break out users for given group\n",
+    "    #print(users)\n",
+    "    for user in users:\n",
+    "        user_groups.update({user:x}) #this is not appending the value to the key\n",
+    "        \n",
+    "print(user_groups)       \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'admin': 'administrator'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test program to add multiple values \n",
+    "user = \"admin\"\n",
+    "group = \"administrator\"\n",
+    "group2 = \"local\"\n",
+    "user_groups = {}\n",
+    "user_groups.update({user:group})\n",
+    "print(user_groups)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'admin': ['local', 'public', 'administrator'], 'userA': ['local'], 'userB': ['public']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def groups_per_user(group_dictionary):\n",
+    "    user_groups = {}\n",
+    "    # Go through group_dictionary\n",
+    "    for key,users in group_dictionary.items():\n",
+    "        # Now go through the users in the group\n",
+    "        for user in users:\n",
+    "            if (user not in user_groups.keys()):\n",
+    "                user_groups[user]=[]\n",
+    "            user_groups[user].append(key)\n",
+    "            # Now add the group to the the list of\n",
+    "# groups for this user, creating the entry\n",
+    "# in the dictionary if necessary\n",
+    "    return(user_groups)\n",
+    "print(groups_per_user({\"local\": [\"admin\", \"userA\"],\n",
+    "        \"public\":  [\"admin\", \"userB\"],\n",
+    "        \"administrator\": [\"admin\"] }))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
